crates/farol-core/src/snapshots/farol__visual_snapshot_tests__MonitorWidgetError.snap
---
source: crates/farol-core/src/visual_snapshot_tests.rs
expression: extract_visible_text(app.view())
---
Instalar plugin
nome do plugin (índice)
Instalar
git-local
Iniciando plugin...
uptime-kuma
Plugin: uptime-kuma (protocolo 0.2)
Capacidades declaradas: network(monitor.example.com:443)
Falha ao consultar monitores: falha ao consultar /metrics da instância Uptime Kuma configurada
Monitor
Status
Tempo de resposta
farol-api
up
42 ms
openfortivpn-vpn
Iniciando plugin...
docker-containers
Iniciando plugin...
