crates/farol-core/src/snapshots/farol__visual_snapshot_tests__SetupForm.snap
---
source: crates/farol-core/src/visual_snapshot_tests.rs
expression: extract_visible_text(app.view())
---
Instalar plugin
nome do plugin (índice)
Instalar
git-local
Iniciando plugin...
uptime-kuma
Plugin "uptime-kuma" aguardando configuração — preencha os campos abaixo.
URL base da instância Uptime Kuma
URL base da instância Uptime Kuma
API Key de métricas do Uptime Kuma
API Key de métricas do Uptime Kuma
Confirmar
openfortivpn-vpn
Iniciando plugin...
docker-containers
Iniciando plugin...
