crates/farol-core/src/snapshots/farol__visual_snapshot_tests__VersionIncompatible.snap
---
source: crates/farol-core/src/visual_snapshot_tests.rs
expression: extract_visible_text(app.view())
---
git-local
Plugin indisponível — versão de protocolo incompatível
plugin fala protocolo 0.1, core fala 0.2 (débito técnico #4)
uptime-kuma
Iniciando plugin...
